# csv-to-image-downloader

./: Cargo.toml  README.md
data/: test.csv
output/: user_images.json
src/: args.rs  main.rs
src/converter/: model.rs  utils.rs
src/uploader/: utils.rs
