[package]
name = "phone_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
image = "0.24"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }